--- a/templates/auth.html
+++ b/templates/auth.html
@@ -26,9 +26,9 @@
                 
                 {% if request.path == '/register/' %}
                 <div class="form-group mb-3">
-                    {{ form.username(class_="form-control",placeholder="Username")}}
+                    {{ form.name(class_="form-control",placeholder="Name")}}
                 </div>
-                {% for error in form.username.errors %}
+                {% for error in form.name.errors %}
                 <div class="alert alert-warning alert-dismissible fade show" role="alert">
                     {{ error }}
                     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
@@ -45,18 +45,18 @@
                 </div>
                 {% endfor%}
                 <div class="form-group mb-3">
-                    {{ form.pwd(class_="form-control",placeholder="Password")}}
+                    {{ form.password(class_="form-control",placeholder="Password")}}
                 </div>
-                {% for error in form.pwd.errors %}
+                {% for error in form.password.errors %}
                 <div class="alert alert-warning alert-dismissible fade show" role="alert">
                     {{ error }}
                     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                 </div> {% endfor%}
                 {% if request.path == '/register/' %}
                 <div class="form-group mb-3">
-                    {{ form.cpwd(class_="form-control",placeholder="Confirm Password")}}
+                    {{ form.verify_password(class_="form-control",placeholder="Confirm Password")}}
                 </div>
-                {% for error in form.cpwd.errors %}
+                {% for error in form.verify_password.errors %}
                 <div class="alert alert-warning alert-dismissible fade show" role="alert">
                     {{ error }}
                     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
