--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -28,6 +28,8 @@
                                 <th>Description</th>
                                 <th>Type</th>
                                 <th>Date</th>
+                                <th>Edit</th>
+                                <th>Delete</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -37,6 +39,14 @@
                                 <td>{{ transaction.description }}</td>
                                 <td>{{ transaction.type }}</td>
                                 <td>{{ transaction.date }}</td>
+                                <td>
+                                    <a href="{{ url_for('edit_transaction', transaction_id=transaction.id) }}" class="btn btn-primary">Edit</a>
+                                  </td>
+                                <td>
+                                    <form action="{{ url_for('delete_transaction', transaction_id=transaction.id) }}" method="POST">
+                                        <input type="submit" value="Delete" class="btn btn-danger">
+                                    </form>
+                                </td>
                             </tr>
                             {% endfor %}
                         </tbody>
@@ -102,7 +112,11 @@
                         </div>
                         {% endfor%}
 
-                        <button type="submit" class="btn btn-primary">Add Transaction</button>
+                        <div class="text-center">
+                            <div class="d-grid gap-2">
+                                <button type="submit" class="btn btn-primary">Add Transaction</button>
+                            </div>
+                        </div>
                     </form>
                 </div>
             </div>
